--- a/index.html
+++ b/index.html
@@ -6,487 +6,7 @@
     <title>日本百名山</title>
     <meta name="description" content="'One Hundred Mountains of Japan' was selected by Kyuya Fukada (1903-1971), a writer and climber.He said 'Nowhere in the world do people hold mountains in so much regard as in Japan'.Japanese history since the countrys beginnings, and they manifest themselves in every form of art.For mountains have always formed the bedrock of the Japanese soul.">
 
-<style>
-/* ========== 基本レイアウト ========== */
-:root{
-  --bg: #f5f7fb;
-  --card: #ffffff;
-  --text: #1f2937;
-  --muted: #6b7280;
-  --border: #e5e7eb;
-  --head: rgb(9, 98, 68);
-  --headText: #ffffff;
-}
-
-body{
-  margin: 0;
-  font-family: system-ui, -apple-system, "Segoe UI", Roboto, "Noto Sans JP", "Hiragino Kaku Gothic ProN", "Yu Gothic", sans-serif;
-  background: var(--bg);
-  color: var(--text);
-}
-
-.box{
-  max-width: 1200px;
-  margin: 24px auto;
-  padding: 0 16px;
-}
-
-.title{
-  margin: 0 0 12px;
-  font-size: 24px;
-  letter-spacing: .02em;
-}
-
-/* ========== タイトル帯（.hero） ========== */
-.hero{
-  width: 100%;
-  border: 1px solid var(--border);
-  border-radius: 12px;
-  overflow: hidden;
-  box-shadow: 0 8px 24px rgba(0,0,0,.06);
-  margin: 0 0 12px;
-  background: #fff;
-  position: relative;
-}
-
-/* 中の余白と文字 */
-.hero-inner{
-  padding: 34px 22px 30px;
-  position: relative;
-  z-index: 2;
-}
-
-.hero-title{
-  margin: 0;
-  font-size: 28px;
-  letter-spacing: .04em;
-  color: #ffffff;
-  text-shadow: 0 2px 10px rgba(0,0,0,.25);
-}
-
-.hero-sub{
-  margin: 6px 0 0;
-  font-size: 13px;
-  color: rgba(255,255,255,.9);
-}
-
-/* 地紋（パターン）と、ちらちら（簡易アニメ） */
-.hero::before{
-  content: "";
-  position: absolute;
-  inset: 0;
-  z-index: 1;
-  opacity: .95;
-  background:
-    radial-gradient(1200px 220px at 30% 0%, rgba(255,255,255,.35), transparent 60%),
-    radial-gradient(900px 240px at 80% 20%, rgba(255,255,255,.20), transparent 60%),
-    linear-gradient(135deg, #0b7a53, #0a5e43);
-}
-
-/* ====== Hero上にCanvasを重ねる（雪） ====== */
-.hero::before{
-  z-index: 1; /* 背景 */
-}
-
-/* 雪は背景より上、文字より下 */
-#snowCanvas{
-  position: absolute;
-  inset: 0;
-  width: 100%;
-  height: 100%;
-  z-index: 2;
-  pointer-events: none;
-}
-
-/* 文字は一番上 */
-.hero-inner{
-  position: relative;
-  z-index: 3;
-}
-
-/* ========== 季節ごとの雰囲気（色味＋粒の色） ========== */
-.hero.season-winter::before{
-  background:
-    radial-gradient(1200px 220px at 30% 0%, rgba(255,255,255,.45), transparent 60%),
-    radial-gradient(900px 240px at 80% 20%, rgba(255,255,255,.25), transparent 60%),
-    linear-gradient(135deg, #1b4f7a, #0b7a53);
-}
-.hero.season-spring::before{
-  background:
-    radial-gradient(1200px 220px at 20% 0%, rgba(255,255,255,.40), transparent 60%),
-    radial-gradient(900px 240px at 80% 20%, rgba(255,192,203,.35), transparent 60%),
-    linear-gradient(135deg, #d946ef, #0b7a53);
-}
-.hero.season-summer::before{
-  background:
-    radial-gradient(1200px 220px at 20% 0%, rgba(255,255,255,.40), transparent 60%),
-    radial-gradient(900px 240px at 80% 20%, rgba(255,255,0,.25), transparent 60%),
-    linear-gradient(135deg, #2563eb, #0b7a53);
-}
-.hero.season-winter::before{
-  background:
-    radial-gradient(1200px 220px at 30% 0%, rgba(255,255,255,.55), transparent 60%),
-    radial-gradient(900px 240px at 80% 20%, rgba(225,245,255,.35), transparent 60%),
-    linear-gradient(135deg, #0b3a67, #4fb6e8);
-}
-
-/* ========== テーブル全体 ========== */
-.table{
-  width: 100%;
-  border-collapse: separate;
-  border-spacing: 0;
-  background: var(--card);
-  border: 1px solid var(--border);
-  border-radius: 12px;
-  overflow: hidden;
-  box-shadow: 0 8px 24px rgba(0,0,0,.06);
-}
-
-.table th,
-.table td{
-  border-bottom: 1px solid var(--border);
-  padding: 14px 12px;
-  text-align: center;
-  vertical-align: middle;
-  font-size: 14px;
-}
-
-/* 列幅：文字列列は少し広め、画像列は固定気味 */
-.table th:nth-child(1), .table td:nth-child(1){ width: 18%; }
-.table th:nth-child(2), .table td:nth-child(2){ width: 10%; }
-.table th:nth-child(3), .table td:nth-child(3){ width: 12%; }
-.table th:nth-child(4), .table td:nth-child(4),
-.table th:nth-child(5), .table td:nth-child(5),
-.table th:nth-child(6), .table td:nth-child(6){ width: 20%; }
-
-/* ========== ヘッダー ========== */
-.table thead th{
-  position: sticky;   /* スクロールしてもヘッダーが残る */
-  top: 0;
-  z-index: 2;
-  background: var(--head);
-  color: var(--headText);
-  border-bottom: 1px solid rgba(255,255,255,.15);
-}
-
-.sortable{
-  cursor: pointer;
-  user-select: none;
-}
-
-.sortable:hover{
-  filter: brightness(1.06);
-}
-
-/* ========== 行の見やすさ（装飾の肝） ========== */
-.table tbody tr:nth-child(even){
-  background: #fafafa;
-}
-
-.table tbody tr:hover{
-  background: #eef6f1;
-}
-
-/* ========== 三角印 ========== */
-.ascending:after { content: " ▲"; }
-.descending:after { content: " ▼"; }
-
-.sortable-always-arrows::after{
-  content: " ▲▼";
-  font-size: 0.9em;
-  margin-left: 0.2em;
-  opacity: .9;
-}
-
-.sortable-always-arrows.ascending::after,
-.sortable-always-arrows.descending::after{
-  content: "";
-}
-
-/* ========== リンク ========== */
-.link{
-  text-decoration: none;
-  color: #2563eb;
-  font-weight: 600;
-}
-.link:hover{
-  text-decoration: underline;
-}
-
-/* ========== 画像（統一感＋歯抜け対策） ========== */
-.thumb{
-  width: 120px;          /* サムネ幅：少し大きくすると見栄えUP */
-  height: 80px;          /* 高さ固定＝歯抜けしてもレイアウト崩れにくい */
-  object-fit: cover;
-  border-radius: 8px;
-  border: 1px solid var(--border);
-  background: #f3f4f6;   /* 読み込み中の“台”になる */
-  box-shadow: 0 2px 10px rgba(0,0,0,.08);
-  display: inline-block;
-}
-
-/* スマホでは横スクロールに */
-@media (max-width: 900px){
-  .table{
-    display: block;
-    overflow-x: auto;
-    white-space: nowrap;
-  }
-  .thumb{ width: 110px; height: 74px; }
-}
-</style>
-
-    <script>
-        var dir = "asc";
-
-        // ★都道府県の並び順（あなた指定の順番）
-        var prefList = [
-            "北海道",
-            "青森", "秋田", "岩手", "山形", "宮城", "福島",
-            "群馬", "栃木", "茨城", "埼玉", "東京", "千葉", "神奈川",
-            "山梨", "長野", "新潟",
-            "静岡", "愛知", "岐阜", "三重",
-            "富山", "石川", "福井",
-            "和歌山", "滋賀", "奈良", "京都", "大阪", "兵庫",
-            "岡山", "広島", "鳥取", "島根", "山口",
-            "徳島", "愛媛", "香川", "高知",
-            "福岡", "佐賀", "長崎", "大分", "熊本", "宮崎", "鹿児島", "沖縄"
-        ];
-
-        // ★prefList から prefRank（県名→順位）を自動生成
-        var prefRank = {};
-        for (var i = 0; i < prefList.length; i++) {
-            prefRank[prefList[i]] = i + 1;
-        }
-
-        // 表記ゆれ吸収：東京都/大阪府/静岡県 → 東京/大阪/静岡（北海道はそのまま）
-        function normalizePrefName(s) {
-            s = (s || "").trim();
-            if (s.indexOf("北海道") !== -1) return "北海道";
-            return s.replace(/[都府県]/g, "").trim();
-        }
-
-        // 地域セルの「最初に書かれた県」を取り出す（例：山梨/静岡 → 山梨）
-        function getFirstPref(regionText) {
-            var txt = (regionText || "").trim();
-            if (!txt) return "";
-            var parts = txt.split(/[\/、,・\s]+/).map(normalizePrefName).filter(Boolean);
-            return parts.length ? parts[0] : "";
-        }
-
-        function getPrefRankKey(regionText) {
-            var pref = getFirstPref(regionText);
-            return prefRank[pref] || 999;
-        }
-
-        function sortTable(columnIndex) {
-            var table = document.getElementById("myTable");
-            var rows = Array.from(table.tBodies[0].rows);
-
-            if (columnIndex === 1) {
-                // 標高：数値ソート
-                rows.sort(function(a, b) {
-                    var x = parseFloat(a.cells[columnIndex].textContent);
-                    var y = parseFloat(b.cells[columnIndex].textContent);
-                    return dir === "asc" ? x - y : y - x;
-                });
-            } else if (columnIndex === 2) {
-                // 地域：都道府県順位（最初の県）でソート
-                rows.sort(function(a, b) {
-                    var ax = a.cells[columnIndex].textContent.trim();
-                    var bx = b.cells[columnIndex].textContent.trim();
-
-                    var ra = getPrefRankKey(ax);
-                    var rb = getPrefRankKey(bx);
-
-                    if (ra !== rb) return dir === "asc" ? ra - rb : rb - ra;
-
-                    return dir === "asc"
-                        ? ax.localeCompare(bx, "ja")
-                        : bx.localeCompare(ax, "ja");
-                });
-            }
-
-            rows.forEach(function(r) {
-                table.tBodies[0].appendChild(r);
-            });
-
-            // ▼▲ 表示（元の三角印制御の考え方）
-            var th = document.querySelector('.sortable[data-column="' + columnIndex + '"]');
-            th.classList.toggle("ascending", dir === "asc");
-            th.classList.toggle("descending", dir === "desc");
-
-            dir = dir === "asc" ? "desc" : "asc";
-        }
-
-// ===== 季節クラスを自動で付与（12-2冬 / 3-5春 / 6-8夏 / 9-11秋） =====
-window.addEventListener("DOMContentLoaded", function() {
-  var hero = document.getElementById("hero");
-  if (!hero) return;
-
-  var m = new Date().getMonth() + 1; // 1-12
-  hero.classList.remove("season-winter","season-spring","season-summer","season-autumn");
-
-  if (m === 12 || m === 1 || m === 2) hero.classList.add("season-winter");
-  else if (m >= 3 && m <= 5) hero.classList.add("season-spring");
-  else if (m >= 6 && m <= 8) hero.classList.add("season-summer");
-  else hero.classList.add("season-autumn");
-});
-</script>
-
-<script>
-(function () {
-  function isWinterMonth() {
-    const m = new Date().getMonth() + 1; // 1-12
-    return (m === 12 || m === 1 || m === 2);
-  }
-
-  window.addEventListener("DOMContentLoaded", function () {
-    const hero = document.getElementById("hero");
-    const canvas = document.getElementById("snowCanvas");
-    if (!hero || !canvas) return;
-
-    // 冬以外は雪を消す
-    if (!isWinterMonth()) {
-      canvas.style.display = "none";
-      return;
-    }
-
-    const ctx = canvas.getContext("2d");
-    let w = 0, h = 0;
-    let flakes = [];
-    let rafId = null;
-
-    function resize() {
-      const r = hero.getBoundingClientRect();
-      w = Math.max(1, Math.floor(r.width));
-      h = Math.max(1, Math.floor(r.height));
-
-      // 高DPI対策（くっきり）
-      const dpr = Math.max(1, window.devicePixelRatio || 1);
-      canvas.width = Math.floor(w * dpr);
-      canvas.height = Math.floor(h * dpr);
-      canvas.style.width = w + "px";
-      canvas.style.height = h + "px";
-      ctx.setTransform(dpr, 0, 0, dpr, 0, 0);
-    }
-
-    function rand(min, max) { return Math.random() * (max - min) + min; }
-
-    // 大小混在（小多め・中そこそこ・大少し）
-    function pickSize() {
-      const r = Math.random();
-      if (r < 0.70) return rand(1.0, 2.0);   // 小
-      if (r < 0.93) return rand(2.0, 3.2);   // 中
-      return rand(3.2, 4.6);                 // 大（少しだけ）
-    }
-
-    function newFlake(spawnTop = true) {
-      const size = pickSize();
-      return {
-        x: rand(0, w),
-        y: spawnTop ? rand(-h, 0) : rand(0, h),
-        r: size,
-
-        // 落下速度：小は遅め、大は少し速め（自然）
-        vy: (size < 2.1 ? rand(10, 22) : size < 3.3 ? rand(18, 32) : rand(26, 44)) / 60,
-
-        // 横流れ（上品に）
-        vx: rand(-8, 8) / 60,
-
-        // ふわっと揺れる（“びくっ”は禁止：sinのみ）
-        phase: rand(0, Math.PI * 2),
-        sway: rand(0.4, 1.4),
-
-        // 回転は最小限（不快感防止）
-        rot: rand(0, Math.PI * 2),
-        vrot: rand(-0.01, 0.01),
-
-        alpha: rand(0.35, 0.85)
-      };
-    }
-
-    function init() {
-      resize();
-      flakes = [];
-
-      // 密度：hero幅に応じて自動（多すぎない）
-      const count = Math.min(120, Math.max(55, Math.floor(w / 12)));
-      for (let i = 0; i < count; i++) flakes.push(newFlake(true));
-    }
-
-    // “雪の結晶っぽい” 軽量描画：＋ と × ＋ 先端ちょい
-    function drawFlake(f) {
-      ctx.save();
-      ctx.globalAlpha = f.alpha;
-      ctx.translate(f.x, f.y);
-      ctx.rotate(f.rot);
-
-      ctx.lineWidth = Math.max(1, f.r / 2.3);
-      ctx.strokeStyle = "rgba(255,255,255,0.9)";
-      ctx.lineCap = "round";
-
-      const r = f.r;
-
-      ctx.beginPath();
-      // + と ×
-      ctx.moveTo(-r, 0); ctx.lineTo(r, 0);
-      ctx.moveTo(0, -r); ctx.lineTo(0, r);
-      ctx.moveTo(-r*0.75, -r*0.75); ctx.lineTo(r*0.75, r*0.75);
-      ctx.moveTo(-r*0.75, r*0.75); ctx.lineTo(r*0.75, -r*0.75);
-
-      // 先端の“トゲ”を少し（大きい粒だけ）
-      if (r > 2.2) {
-        ctx.moveTo(0, -r); ctx.lineTo(-r*0.25, -r*0.75);
-        ctx.moveTo(0, -r); ctx.lineTo(r*0.25, -r*0.75);
-        ctx.moveTo(0, r); ctx.lineTo(-r*0.25, r*0.75);
-        ctx.moveTo(0, r); ctx.lineTo(r*0.25, r*0.75);
-      }
-
-      ctx.stroke();
-      ctx.restore();
-    }
-
-    function tick() {
-      ctx.clearRect(0, 0, w, h);
-
-      for (const f of flakes) {
-        f.phase += 0.012;
-        f.x += f.vx + Math.sin(f.phase) * (f.sway / 60);
-        f.y += f.vy;
-        f.rot += f.vrot;
-
-        // 下に落ちたら上から復活
-        if (f.y > h + 12) {
-          f.y = rand(-30, -6);
-          f.x = rand(0, w);
-          // サイズや速度も少し変えて“完全ランダム感”
-          const nf = newFlake(true);
-          f.r = nf.r; f.vy = nf.vy; f.vx = nf.vx; f.sway = nf.sway; f.alpha = nf.alpha;
-        }
-        if (f.x < -12) f.x = w + 12;
-        if (f.x > w + 12) f.x = -12;
-
-        drawFlake(f);
-      }
-
-      rafId = requestAnimationFrame(tick);
-    }
-
-    init();
-    tick();
-
-    // heroサイズが変わったら再生成
-    const ro = new ResizeObserver(() => init());
-    ro.observe(hero);
-
-    window.addEventListener("beforeunload", () => {
-      if (rafId) cancelAnimationFrame(rafId);
-      ro.disconnect();
-    });
-  });
-})();
-</script>
+    <link rel="stylesheet" href="assets/css/style.css">
 
     <link href="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.7.1/css/lightbox.css" rel="stylesheet">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
@@ -1188,8 +708,14 @@ window.addEventListener("DOMContentLoaded", function() {
     <div class="image-container">
         <!-- <img src="path/to/image.jpg" alt="山の写真"> -->
       </div>
+
+<script src="assets/js/table.js" defer></script>
+<script src="assets/js/snow.js" defer></script>
+
+
 </body>
 </html>
+
 
 
 
