--- a/index.html
+++ b/index.html
@@ -835,7 +835,6 @@
     <td><a target="_blank" href="https://ja.wikipedia.org/wiki/%E7%94%B2%E6%AD%A6%E4%BF%A1%E3%83%B6%E5%B2%B3" class="link">甲武信岳</a></td>
     <td>2475</td>
     <td>埼玉/山梨/長野</td>
-</tr>
 
 <td>
   <a href="images/36_甲武信ヶ岳/kobushigatake_001.jpg" data-lightbox="kobushigatake">
@@ -852,7 +851,8 @@
     <img class="thumb" src="images/36_甲武信ヶ岳/kobushigatake_003.jpg" loading="lazy" decoding="async" width="120" height="80">
   </a>
 </td>                
-
+</tr>
+                
 <tr>    
     <td><a target="_blank" href="https://ja.wikipedia.org/wiki/%E7%81%AB%E6%89%93%E5%B1%B1" class="link">火打山</a></td>
     <td>2462</td>
@@ -1074,23 +1074,23 @@
 </tr>
 
 <tr>    
-    <td><a target="_blank" href="https://ja.wikipedia.org/wiki/%E6%81%B5%E9%82%A3%E5%B1%B1" class="link">恵那山</a></td>
+    <td><a target="_blank" href="https://ja.wikipedia.org/wiki/%E6%81%B5%E9%82%A3%E5%B1%B1" class="link">恵那岳</a></td>
     <td>2191</td>
     <td>長野/岐阜</td>
 
 <td>
-  <a href="images/47_恵那山/enasan_001.jpg" data-lightbox="enasan">
-    <img class="thumb" src="images/47_恵那山/enasan_001.jpg" loading="lazy" decoding="async" width="120" height="80">
+  <a href="images/47_恵那岳/enasan_001.jpg" data-lightbox="enasan">
+    <img class="thumb" src="images/47_恵那岳/enasan_001.jpg" loading="lazy" decoding="async" width="120" height="80">
   </a>
 </td>
 <td>
-  <a href="images/47_恵那山/enasan_002.jpg" data-lightbox="enasan">
-    <img class="thumb" src="images/47_恵那山/enasan_002.jpg" loading="lazy" decoding="async" width="120" height="80">
+  <a href="images/47_恵那岳/enasan_002.jpg" data-lightbox="enasan">
+    <img class="thumb" src="images/47_恵那岳/enasan_002.jpg" loading="lazy" decoding="async" width="120" height="80">
   </a>
 </td>
 <td>
-  <a href="images/47_恵那山/enasan_003.jpg" data-lightbox="enasan">
-    <img class="thumb" src="images/47_恵那山/enasan_003.jpg" loading="lazy" decoding="async" width="120" height="80">
+  <a href="images/47_恵那岳/enasan_003.jpg" data-lightbox="enasan">
+    <img class="thumb" src="images/47_恵那岳/enasan_003.jpg" loading="lazy" decoding="async" width="120" height="80">
   </a>
 </td>
 </tr>
@@ -2273,6 +2273,7 @@
 
 </body>
 </html>
+
 
 
 
