--- a/index.html
+++ b/index.html
@@ -243,18 +243,18 @@
     <td>長野/静岡</td>
 
 <td>
-  <a href="images/09_塩見岳/siomidake_001.jpg" data-lightbox="siomidake">
-    <img class="thumb" src="images/09_塩見岳/siomidake_001.jpg" loading="lazy" decoding="async" width="120" height="80">
+  <a href="images/09_塩見岳/shiomidake_001.jpg" data-lightbox="shiomidake">
+    <img class="thumb" src="images/09_塩見岳/shiomidake_001.jpg" loading="lazy" decoding="async" width="120" height="80">
   </a>
 </td>
 <td>
-  <a href="images/09_塩見岳/siomidake_002.jpg" data-lightbox="siomidake">
-    <img class="thumb" src="images/09_塩見岳/siomidake_002.jpg" loading="lazy" decoding="async" width="120" height="80">
+  <a href="images/09_塩見岳/shiomidake_002.jpg" data-lightbox="shiomidake">
+    <img class="thumb" src="images/09_塩見岳/shiomidake_002.jpg" loading="lazy" decoding="async" width="120" height="80">
   </a>
 </td>
 <td>
-  <a href="images/09_塩見岳/siomidake_003.jpg" data-lightbox="siomidake">
-    <img class="thumb" src="images/09_塩見岳/siomidake_003.jpg" loading="lazy" decoding="async" width="120" height="80">
+  <a href="images/09_塩見岳/shiomidake_003.jpg" data-lightbox="shiomidake">
+    <img class="thumb" src="images/09_塩見岳/shiomidake_003.jpg" loading="lazy" decoding="async" width="120" height="80">
   </a>
 </td>
 </tr>
@@ -2273,6 +2273,7 @@
 
 </body>
 </html>
+
 
 
 
