--- a/index.html
+++ b/index.html
@@ -441,7 +441,7 @@
     <td>長野/富山</td>
 
 <td>
-  <a href="images/18_白馬岳/siroumadake_001.jpg" data-lightbox="siroumadake">
+  <a href="images/18_白馬岳/shiroumadake_001.jpg" data-lightbox="siroumadake">
     <img class="thumb" src="images/18_白馬岳/siroumadake_001.jpg" loading="lazy" decoding="async" width="120" height="80">
   </a>
 </td>
@@ -2273,6 +2273,7 @@
 
 </body>
 </html>
+
 
 
 
