--- a/index.html
+++ b/index.html
@@ -441,18 +441,18 @@
     <td>長野/富山</td>
 
 <td>
-  <a href="images/18_白馬岳/shiroumadake_001.jpg" data-lightbox="siroumadake">
-    <img class="thumb" src="images/18_白馬岳/siroumadake_001.jpg" loading="lazy" decoding="async" width="120" height="80">
+  <a href="images/18_白馬岳/shiroumadake_001.jpg" data-lightbox="shiroumadake">
+    <img class="thumb" src="images/18_白馬岳/shiroumadake_001.jpg" loading="lazy" decoding="async" width="120" height="80">
   </a>
 </td>
 <td>
-  <a href="images/18_白馬岳/siroumadake_002.jpg" data-lightbox="siroumadake">
+  <a href="images/18_白馬岳/shiroumadake_002.jpg" data-lightbox="shiroumadake">
     <img class="thumb" src="images/18_白馬岳/siroumadake_002.jpg" loading="lazy" decoding="async" width="120" height="80">
   </a>
 </td>
 <td>
-  <a href="images/18_白馬岳/siroumadake_003.jpg" data-lightbox="siroumadake">
-    <img class="thumb" src="images/18_白馬岳/siroumadake_003.jpg" loading="lazy" decoding="async" width="120" height="80">
+  <a href="images/18_白馬岳/siroumadake_003.jpg" data-lightbox="shiroumadake">
+    <img class="thumb" src="images/18_白馬岳/shiroumadake_003.jpg" loading="lazy" decoding="async" width="120" height="80">
   </a>
 </td>
 </tr>
@@ -2273,6 +2273,7 @@
 
 </body>
 </html>
+
 
 
 
