--- a/index.html
+++ b/index.html
@@ -700,7 +700,7 @@
 </tr>
 
 <tr>    
-    <td><a target="_blank" href="https://ja.wikipedia.org/wiki/%E9%87%91%E5%B3%B0%E5%B1%B1_(%E5%B1%B1%E6%A2%A8%E7%9C%8C%E3%83%BB%E9%95%B7%E9%87%8E%E7%9C%8C)" class="link">金峯山</a></td>
+    <td><a target="_blank" href="https://ja.wikipedia.org/wiki/%E9%87%91%E5%B3%B0%E5%B1%B1_(%E5%B1%B1%E6%A2%A8%E7%9C%8C%E3%83%BB%E9%95%B7%E9%87%8E%E7%9C%8C)" class="link">金峰山</a></td>
     <td>2599</td>
     <td>山梨/長野</td>
 
@@ -2273,6 +2273,7 @@
 
 </body>
 </html>
+
 
 
 
