--- a/index.html
+++ b/index.html
@@ -1074,23 +1074,23 @@
 </tr>
 
 <tr>    
-    <td><a target="_blank" href="https://ja.wikipedia.org/wiki/%E6%81%B5%E9%82%A3%E5%B1%B1" class="link">恵那岳</a></td>
+    <td><a target="_blank" href="https://ja.wikipedia.org/wiki/%E6%81%B5%E9%82%A3%E5%B1%B1" class="link">恵那山</a></td>
     <td>2191</td>
     <td>長野/岐阜</td>
 
 <td>
-  <a href="images/47_恵那岳/enasan_001.jpg" data-lightbox="enasan">
-    <img class="thumb" src="images/47_恵那岳/enasan_001.jpg" loading="lazy" decoding="async" width="120" height="80">
+  <a href="images/47_恵那山/enasan_001.jpg" data-lightbox="enasan">
+    <img class="thumb" src="images/47_恵那山/enasan_001.jpg" loading="lazy" decoding="async" width="120" height="80">
   </a>
 </td>
 <td>
-  <a href="images/47_恵那岳/enasan_002.jpg" data-lightbox="enasan">
-    <img class="thumb" src="images/47_恵那岳/enasan_002.jpg" loading="lazy" decoding="async" width="120" height="80">
+  <a href="images/47_恵那山/enasan_002.jpg" data-lightbox="enasan">
+    <img class="thumb" src="images/47_恵那山/enasan_002.jpg" loading="lazy" decoding="async" width="120" height="80">
   </a>
 </td>
 <td>
-  <a href="images/47_恵那岳/enasan_003.jpg" data-lightbox="enasan">
-    <img class="thumb" src="images/47_恵那岳/enasan_003.jpg" loading="lazy" decoding="async" width="120" height="80">
+  <a href="images/47_恵那山/enasan_003.jpg" data-lightbox="enasan">
+    <img class="thumb" src="images/47_恵那山/enasan_003.jpg" loading="lazy" decoding="async" width="120" height="80">
   </a>
 </td>
 </tr>
@@ -2273,6 +2273,7 @@
 
 </body>
 </html>
+
 
 
 
