--- a/index.html
+++ b/index.html
@@ -2180,18 +2180,18 @@
     <td>静岡</td>
 
 <td>
-  <a href="images/97_天城山/amagiyama_001.jpg" data-lightbox="amagiyama">
-    <img class="thumb" src="images/97_天城山/amagiyama_001.jpg" loading="lazy" decoding="async" width="120" height="80">
+  <a href="images/97_天城山/amagisan_001.jpg" data-lightbox="amagisan">
+    <img class="thumb" src="images/97_天城山/amagisan_001.jpg" loading="lazy" decoding="async" width="120" height="80">
   </a>
 </td>
 <td>
-  <a href="images/97_天城山/amagiyama_002.jpg" data-lightbox="amagiyama">
-    <img class="thumb" src="images/97_天城山/amagiyama_002.jpg" loading="lazy" decoding="async" width="120" height="80">
+  <a href="images/97_天城山/amagisan_002.jpg" data-lightbox="amagisan">
+    <img class="thumb" src="images/97_天城山/amagisan_002.jpg" loading="lazy" decoding="async" width="120" height="80">
   </a>
 </td>
 <td>
-  <a href="images/97_天城山/amagiyama_003.jpg" data-lightbox="amagiyama">
-    <img class="thumb" src="images/97_天城山/amagiyama_003.jpg" loading="lazy" decoding="async" width="120" height="80">
+  <a href="images/97_天城山/amagisan_003.jpg" data-lightbox="amagisan">
+    <img class="thumb" src="images/97_天城山/amagisan_003.jpg" loading="lazy" decoding="async" width="120" height="80">
   </a>
 </td>
 </tr>
@@ -2273,6 +2273,7 @@
 
 </body>
 </html>
+
 
 
 
