--- a/index.html
+++ b/index.html
@@ -2048,18 +2048,18 @@
     <td>熊本</td>
 
 <td>
-  <a href="images/91_阿蘇山/asozan_001.jpg" data-lightbox="asozan">
-    <img class="thumb" src="images/91_阿蘇山/asozan_001.jpg" loading="lazy" decoding="async" width="120" height="80">
+  <a href="images/91_阿蘇山/asosan_001.jpg" data-lightbox="asosan">
+    <img class="thumb" src="images/91_阿蘇山/asosan_001.jpg" loading="lazy" decoding="async" width="120" height="80">
   </a>
 </td>
 <td>
-  <a href="images/91_阿蘇山/asozan_002.jpg" data-lightbox="asozan">
-    <img class="thumb" src="images/91_阿蘇山/asozan_002.jpg" loading="lazy" decoding="async" width="120" height="80">
+  <a href="images/91_阿蘇山/asosan_002.jpg" data-lightbox="asosan">
+    <img class="thumb" src="images/91_阿蘇山/asosan_002.jpg" loading="lazy" decoding="async" width="120" height="80">
   </a>
 </td>
 <td>
-  <a href="images/91_阿蘇山/asozan_003.jpg" data-lightbox="asozan">
-    <img class="thumb" src="images/91_阿蘇山/asozan_003.jpg" loading="lazy" decoding="async" width="120" height="80">
+  <a href="images/91_阿蘇山/asosan_003.jpg" data-lightbox="asosan">
+    <img class="thumb" src="images/91_阿蘇山/asosan_003.jpg" loading="lazy" decoding="async" width="120" height="80">
   </a>
 </td>
 </tr>
@@ -2273,6 +2273,7 @@
 
 </body>
 </html>
+
 
 
 
