--- a/index.html
+++ b/index.html
@@ -1960,18 +1960,18 @@
     <td>奈良/三重</td>
 
 <td>
-  <a href="images/87_大台ヶ原山（日出ヶ岳）/oodaigaharayama_001.jpg" data-lightbox="oodaigaharayama">
-    <img class="thumb" src="images/87_大台ヶ原山（日出ヶ岳）/oodaigaharayama_001.jpg" loading="lazy" decoding="async" width="120" height="80">
+  <a href="images/87_大台ヶ原山（日出ヶ岳）/oodaigahara_001.jpg" data-lightbox="oodaigahara">
+    <img class="thumb" src="images/87_大台ヶ原山（日出ヶ岳）/oodaigahara_001.jpg" loading="lazy" decoding="async" width="120" height="80">
   </a>
 </td>
 <td>
-  <a href="images/87_大台ヶ原山（日出ヶ岳）/oodaigaharayama_002.jpg" data-lightbox="oodaigaharayama">
-    <img class="thumb" src="images/87_大台ヶ原山（日出ヶ岳）/oodaigaharayama_002.jpg" loading="lazy" decoding="async" width="120" height="80">
+  <a href="images/87_大台ヶ原山（日出ヶ岳）/oodaigahara_002.jpg" data-lightbox="oodaigahara">
+    <img class="thumb" src="images/87_大台ヶ原山（日出ヶ岳）/oodaigahara_002.jpg" loading="lazy" decoding="async" width="120" height="80">
   </a>
 </td>
 <td>
-  <a href="images/87_大台ヶ原山（日出ヶ岳）/oodaigaharayama_003.jpg" data-lightbox="oodaigaharayama">
-    <img class="thumb" src="images/87_大台ヶ原山（日出ヶ岳）/oodaigaharayama_003.jpg" loading="lazy" decoding="async" width="120" height="80">
+  <a href="images/87_大台ヶ原山（日出ヶ岳）/oodaigahara_003.jpg" data-lightbox="oodaigahara">
+    <img class="thumb" src="images/87_大台ヶ原山（日出ヶ岳）/oodaigahara_003.jpg" loading="lazy" decoding="async" width="120" height="80">
   </a>
 </td>
 </tr>
@@ -2273,6 +2273,7 @@
 
 </body>
 </html>
+
 
 
 
