--- a/index.html
+++ b/index.html
@@ -2326,9 +2326,11 @@
   <script src="assets/js/table.js" defer></script>
   <script src="assets/js/snow.js" defer></script>
   <script src="assets/js/comments.js" defer></script>
+　<script src="https://challenges.cloudflare.com/turnstile/v0/api.js" async defer></script>
 
 </body>
 </html>
+
 
 
 
