--- a/index.html
+++ b/index.html
@@ -2305,6 +2305,8 @@
                data-callback="onTurnstileSuccess"
                data-expired-callback="onTurnstileExpired"></div>
 
+          <span id="commentFlash" class="comment-flash" aria-live="polite"></span>
+
           <div class="comment-actions">
             <button type="submit" id="commentSubmit">投稿する</button>
             <span class="comment-status" id="commentStatus" aria-live="polite"></span>
@@ -2328,6 +2330,7 @@
 
 </body>
 </html>
+
 
 
 
