--- a/index.html
+++ b/index.html
@@ -39,6 +39,9 @@
     />
     <button id="searchClear" class="search-clear" type="button" aria-label="検索をクリア">×</button>
   </div>
+  
+  <div class="comment-hint">思い出の山に、ひとこと残してみませんか</div>
+  
   <div id="searchMeta" class="search-meta" aria-live="polite"></div>
 </div>
 
@@ -2330,6 +2333,7 @@
 
 </body>
 </html>
+
 
 
 
