--- a/index.html
+++ b/index.html
@@ -40,7 +40,14 @@
     <button id="searchClear" class="search-clear" type="button" aria-label="検索をクリア">×</button>
   </div>
   
-  <div class="comment-hint">思い出の山に、ひとこと残してみませんか</div>
+  <a class="comment-hint" href="#comments" aria-label="コメント欄へ移動">
+  思い出の山に、ひとこと残してみませんか
+  <span class="comment-hint-icon" aria-hidden="true">
+    <svg viewBox="0 0 24 24" class="hint-feather">
+      <path d="M20.7 3.3c-3.3-3.3-9.2-1.4-13.2 2.6C3.9 9.5 2 15.4 5.3 18.7c1 .9 2.2 1.4 3.6 1.4 2.8 0 6.1-1.7 8.9-4.4 4-4 5.9-9.9 2.9-13.4zM7.4 17.6c-.7-.7-.8-1.9-.5-3.3l3.8 3.8c-1.4.3-2.6.2-3.3-.5zm5.1-.8-4.4-4.4c.5-1.1 1.2-2.3 2.2-3.4l5.6 5.6c-1.1 1-2.3 1.7-3.4 2.2zm4.6-3.6L10.8 6.9c2.9-2.5 6.8-3.8 8.6-2 1.8 1.8.5 5.7-2.3 8.3z"/>
+    </svg>
+  </span>
+</a>
   
   <div id="searchMeta" class="search-meta" aria-live="polite"></div>
 </div>
@@ -2333,6 +2340,7 @@
 
 </body>
 </html>
+
 
 
 
