--- a/index.html
+++ b/index.html
@@ -42,11 +42,19 @@
   
   <a class="comment-hint" href="#comments" aria-label="コメント欄へ移動">
   思い出の山に、ひとこと残してみませんか
-  <span class="comment-hint-icon" aria-hidden="true">
-    <svg viewBox="0 0 24 24" class="hint-feather">
-      <path d="M20.7 3.3c-3.3-3.3-9.2-1.4-13.2 2.6C3.9 9.5 2 15.4 5.3 18.7c1 .9 2.2 1.4 3.6 1.4 2.8 0 6.1-1.7 8.9-4.4 4-4 5.9-9.9 2.9-13.4zM7.4 17.6c-.7-.7-.8-1.9-.5-3.3l3.8 3.8c-1.4.3-2.6.2-3.3-.5zm5.1-.8-4.4-4.4c.5-1.1 1.2-2.3 2.2-3.4l5.6 5.6c-1.1 1-2.3 1.7-3.4 2.2zm4.6-3.6L10.8 6.9c2.9-2.5 6.8-3.8 8.6-2 1.8 1.8.5 5.7-2.3 8.3z"/>
-    </svg>
-  </span>
+<span class="comment-hint-icon" aria-hidden="true">
+  <svg class="hint-feather" viewBox="0 0 24 24" fill="none">
+    <path d="M20 4c-6 0-12 6-12 12v4h4c6 0 12-6 12-12 0-2-1-3-4-4z"
+          stroke="currentColor" stroke-width="1.6" stroke-linecap="round" stroke-linejoin="round"/>
+    <path d="M8 20l-4 0 0-4"
+          stroke="currentColor" stroke-width="1.6" stroke-linecap="round" stroke-linejoin="round"/>
+    <path d="M9 15c2 .5 4 0 6-2"
+          stroke="currentColor" stroke-width="1.6" stroke-linecap="round" stroke-linejoin="round"/>
+    <path d="M10 14l-4-4"
+          stroke="currentColor" stroke-width="1.6" stroke-linecap="round" stroke-linejoin="round"/>
+  </svg>
+</span>
+
 </a>
   
   <div id="searchMeta" class="search-meta" aria-live="polite"></div>
@@ -2340,6 +2348,7 @@
 
 </body>
 </html>
+
 
 
 
