--- a/index.html
+++ b/index.html
@@ -42,18 +42,25 @@
   
   <a class="comment-hint" href="#comments" aria-label="コメント欄へ移動">
   思い出の山に、ひとこと残してみませんか
-<span class="comment-hint-icon" aria-hidden="true">
-  <svg class="hint-feather" viewBox="0 0 24 24" fill="none">
-    <path d="M20 4c-6 0-12 6-12 12v4h4c6 0 12-6 12-12 0-2-1-3-4-4z"
-          stroke="currentColor" stroke-width="1.6" stroke-linecap="round" stroke-linejoin="round"/>
-    <path d="M8 20l-4 0 0-4"
-          stroke="currentColor" stroke-width="1.6" stroke-linecap="round" stroke-linejoin="round"/>
-    <path d="M9 15c2 .5 4 0 6-2"
-          stroke="currentColor" stroke-width="1.6" stroke-linecap="round" stroke-linejoin="round"/>
-    <path d="M10 14l-4-4"
-          stroke="currentColor" stroke-width="1.6" stroke-linecap="round" stroke-linejoin="round"/>
+
+  <span class="comment-hint-icon" aria-hidden="true">
+  <svg class="hint-feather" viewBox="0 0 24 24" aria-hidden="true">
+    <!-- 羽根（シルエット寄り） -->
+    <path d="M21.6 3.2c-4.7-2.2-10.9 1.6-14.5 6.2C4.2 13.3 3.1 17.1 4.7 19
+             c.7.9 1.8 1.3 3.2 1.3 3.8 0 8.7-3 12.1-7.4
+             c3.2-4.1 4.1-8.2 1.6-9.7z"
+          fill="currentColor"/>
+    <!-- ひだ（羽根っぽさ） -->
+    <path d="M7.2 18.2c3.6-1.4 6.9-3.9 9.6-7.1"
+          fill="none" stroke="rgba(255,255,255,0.25)" stroke-width="1.1" stroke-linecap="round"/>
+    <path d="M8.2 16.6c2.6-1.2 5.3-3.2 7.4-5.7"
+          fill="none" stroke="rgba(255,255,255,0.18)" stroke-width="1" stroke-linecap="round"/>
+    <!-- ペン先 -->
+    <path d="M4.4 20.4l2.2-.7.7-2.2-2.9 2.9z"
+          fill="currentColor"/>
   </svg>
 </span>
+
 
 </a>
   
@@ -2348,6 +2355,7 @@
 
 </body>
 </html>
+
 
 
 
