--- a/index.html
+++ b/index.html
@@ -43,23 +43,43 @@
   <a class="comment-hint" href="#comments" aria-label="コメント欄へ移動">
   思い出の山に、ひとこと残してみませんか
 
-  <span class="comment-hint-icon" aria-hidden="true">
-  <svg class="hint-feather" viewBox="0 0 24 24" aria-hidden="true">
-    <!-- 羽根（シルエット寄り） -->
-    <path d="M21.6 3.2c-4.7-2.2-10.9 1.6-14.5 6.2C4.2 13.3 3.1 17.1 4.7 19
-             c.7.9 1.8 1.3 3.2 1.3 3.8 0 8.7-3 12.1-7.4
-             c3.2-4.1 4.1-8.2 1.6-9.7z"
+ <span class="comment-hint-icon" aria-hidden="true">
+  <svg class="hint-feather" viewBox="0 0 64 64" aria-hidden="true">
+    <!-- 羽根（ギザギザ入りのシルエット） -->
+    <path d="M50 6
+             C38 8 26 20 22 30
+             C18 40 18 50 22 56
+             C24 59 28 60 33 58
+             C39 56 46 49 50 40
+             C54 32 55 24 54 18
+             C53 12 52 8 50 6
+             Z"
           fill="currentColor"/>
-    <!-- ひだ（羽根っぽさ） -->
-    <path d="M7.2 18.2c3.6-1.4 6.9-3.9 9.6-7.1"
-          fill="none" stroke="rgba(255,255,255,0.25)" stroke-width="1.1" stroke-linecap="round"/>
-    <path d="M8.2 16.6c2.6-1.2 5.3-3.2 7.4-5.7"
-          fill="none" stroke="rgba(255,255,255,0.18)" stroke-width="1" stroke-linecap="round"/>
+    <!-- 羽枝（ギザギザ感：切り欠き） -->
+    <path d="M27 51 L31 47 L26 46 L30 42 L24 41 L29 37 L23 36"
+          fill="none" stroke="rgba(255,255,255,0.28)" stroke-width="2"
+          stroke-linecap="round" stroke-linejoin="round"/>
+    <path d="M33 50 L36 45 L31 44 L35 40 L29 39 L34 35"
+          fill="none" stroke="rgba(255,255,255,0.22)" stroke-width="2"
+          stroke-linecap="round" stroke-linejoin="round"/>
+    <!-- 軸（中心線） -->
+    <path d="M46 14 C38 20 30 30 26 40"
+          fill="none" stroke="rgba(255,255,255,0.22)" stroke-width="2.2"
+          stroke-linecap="round"/>
     <!-- ペン先 -->
-    <path d="M4.4 20.4l2.2-.7.7-2.2-2.9 2.9z"
+    <path d="M16 60
+             L24 52
+             L28 56
+             L20 64
+             L16 60
+             Z"
           fill="currentColor"/>
+    <path d="M21 58 L26 53"
+          fill="none" stroke="rgba(255,255,255,0.25)" stroke-width="2"
+          stroke-linecap="round"/>
   </svg>
 </span>
+
 
 
 </a>
@@ -2355,6 +2375,7 @@
 
 </body>
 </html>
+
 
 
 
