--- a/index.html
+++ b/index.html
@@ -42,47 +42,8 @@
   
   <a class="comment-hint" href="#comments" aria-label="コメント欄へ移動">
   思い出の山に、ひとこと残してみませんか
-
- <span class="comment-hint-icon" aria-hidden="true">
-  <svg class="hint-feather" viewBox="0 0 64 64" aria-hidden="true">
-    <!-- 羽根（ギザギザ入りのシルエット） -->
-    <path d="M50 6
-             C38 8 26 20 22 30
-             C18 40 18 50 22 56
-             C24 59 28 60 33 58
-             C39 56 46 49 50 40
-             C54 32 55 24 54 18
-             C53 12 52 8 50 6
-             Z"
-          fill="currentColor"/>
-    <!-- 羽枝（ギザギザ感：切り欠き） -->
-    <path d="M27 51 L31 47 L26 46 L30 42 L24 41 L29 37 L23 36"
-          fill="none" stroke="rgba(255,255,255,0.28)" stroke-width="2"
-          stroke-linecap="round" stroke-linejoin="round"/>
-    <path d="M33 50 L36 45 L31 44 L35 40 L29 39 L34 35"
-          fill="none" stroke="rgba(255,255,255,0.22)" stroke-width="2"
-          stroke-linecap="round" stroke-linejoin="round"/>
-    <!-- 軸（中心線） -->
-    <path d="M46 14 C38 20 30 30 26 40"
-          fill="none" stroke="rgba(255,255,255,0.22)" stroke-width="2.2"
-          stroke-linecap="round"/>
-    <!-- ペン先 -->
-    <path d="M16 60
-             L24 52
-             L28 56
-             L20 64
-             L16 60
-             Z"
-          fill="currentColor"/>
-    <path d="M21 58 L26 53"
-          fill="none" stroke="rgba(255,255,255,0.25)" stroke-width="2"
-          stroke-linecap="round"/>
-  </svg>
-</span>
-
-
-
-</a>
+  <span class="comment-hint-icon feather" aria-hidden="true"></span>
+  </a>
   
   <div id="searchMeta" class="search-meta" aria-live="polite"></div>
 </div>
@@ -2375,6 +2336,7 @@
 
 </body>
 </html>
+
 
 
 
