--- a/index.html
+++ b/index.html
@@ -61,7 +61,9 @@
       <ul class="help-list">
         <li>山名をクリックすると、その山が選択されます</li>
         <li>選択した山について、下のコメント欄に思い出を残せます</li>
-        <li>Ctrl（Macは⌘）＋クリックで Wikipedia を開けます</li>
+        <li>山名からWikipediaも別ページで開けます</li>
+        <li>PCの場合 Ctrl（Macは⌘）＋クリック</li>
+        <li>スマホの場合　山名長押し→「新しいタブで開く」を選択</li>
       </ul>
     </div>
   </div>
@@ -2357,6 +2359,7 @@
 
 </body>
 </html>
+
 
 
 
